Addition of images

--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
     <title>Dad Jokes</title>
 </head>
 <body>
-  <div class="container">
-    <h3>Don't Laugh Challenge</h3>
-    <div id="joke" class="joke">
-      // Joke goes here
+  <div class="content-wrapper">
+
+    <div class="top-container">
+      <figure><a href=""><img src="images/laughing_emoji-point.png" alt="laughing emoji pointing"></a></figure>
     </div>
-    <button id="jokeBtn" class="btn">Get Another Joke</button>
-  </div>  
+
+    <div class="container">
+      <h3>Don't Laugh Challenge</h3>
+      <div id="joke" class="joke">
+        // Joke goes here
+      </div>
+      <button id="jokeBtn" class="btn">Get Another Joke</button>
+    </div>
+
+    <div class="bottom-container">
+      <figure><a href=""><img src="images/laughing_emoji-floor.png" alt="laughing emoji on back"></a></figure>
+    </div>
+
+  </div>
+    
 
   <script src="script.js"></script>
 </body>
