Add img and media query

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="content-wrapper">
 
     <div class="top-container">
-      <figure><a href=""><img src="images/laughing_emoji-point.png" alt="laughing emoji pointing"></a></figure>
+      <figure id="emoji-point"><a href=""><img src="images/laughing_emoji-point.png" alt="laughing emoji pointing"></a></figure>
+      <figure id="emoji-tears"><a href=""><img src="images/laughing_emoji-tears.png" alt="laughing emoji pointing"></a></figure>
     </div>
 
     <div class="container">
@@ -23,7 +24,7 @@
     </div>
 
     <div class="bottom-container">
-      <figure><a href=""><img src="images/laughing_emoji-floor.png" alt="laughing emoji on back"></a></figure>
+      <figure id="emoji-floor"><a href=""><img src="images/laughing_emoji-floor.png" alt="laughing emoji on back"></a></figure>
     </div>
 
   </div>
